Restrict pattern on number input

--- a/voronoi.html
+++ b/voronoi.html
@@ -160,7 +160,7 @@
     <div class="voronoi">
       <canvas width="800" height="600" style="border: 1px solid black;"></canvas>
       <div class="controls">
-        <label>Number of points: <input class="pointCount" type="number" min="0" value="100" required /></label>
+        <label>Number of points: <input class="pointCount" type="number" pattern="\d*" min="0" value="100" required /></label>
         <br />
         <button class="genPoints">Place Points</button>
         <button class="drawBtn" disabled>Draw Diagram</button>
