--- a/voronoi.html
+++ b/voronoi.html
@@ -10,11 +10,16 @@
         vor.canvas.ctx = vor.canvas.getContext("2d");
         vor.canvas.points = [];
         vor.canvas.isDrawn = false;
+        vor.canvas.getPoint = getPoint;
         vor.canvas.clearAll = clearAll;
         vor.canvas.drawPoints = drawPoints;
         vor.canvas.fillAreas = fillAreasBrute;
         vor.pointCount = vor.querySelector(".pointCount");
         vor.canvas.addEventListener("click", addPoint);
+        vor.canvas.addEventListener("dragover", function(evt){
+          evt.preventDefault();
+        });
+        vor.canvas.addEventListener("drop", dropImage);
 
         var genPoints = vor.querySelector(".genPoints");
         genPoints.vor = vor;
@@ -44,7 +49,7 @@
 
         vor.canvas.points = new Array(numPoints);
         for(var i = 0; i < numPoints; i++){
-          vor.canvas.points[i] = new VorPoint(Math.floor(Math.random() * (vor.canvas.width + 1)), Math.floor(Math.random() * (vor.canvas.height + 1)));
+          vor.canvas.points[i] = vor.canvas.getPoint(Math.floor(Math.random() * (vor.canvas.width + 1)), Math.floor(Math.random() * (vor.canvas.height + 1)));
         }
 
         /*var pointSpacing = 20;
@@ -68,6 +73,15 @@
         this.ctx.clearRect(0, 0, this.width, this.height);
       }
 
+      function getPoint(x, y){
+        if(this.image){
+          var i = 4 * (y * this.width + x);
+          var color = this.image.data.slice(i, i + 3);
+          return new VorPoint(x, y, color);
+        }
+        else return new VorPoint(x, y);
+      }
+
       function drawPoints(){
         var ctx = this.ctx;
         ctx.fillStyle = "#000000";
@@ -80,8 +94,40 @@
         var rect = this.getBoundingClientRect();
         var x = evt.clientX - rect.left;
         var y = evt.clientY - rect.top;
-        this.points.push(new VorPoint(x, y));
+        this.points.push(this.getPoint(x, y));
         this.isDrawn ? this.fillAreas() : this.drawPoints();
+      }
+
+      function dropImage(evt){
+        var imageFile = null;
+        for(var i = 0; i < evt.dataTransfer.files.length; i++){
+          var curFile = evt.dataTransfer.files[i];
+          if(curFile.type.startsWith("image")){
+            imageFile = curFile;
+            break;
+          }
+        }
+
+        if(imageFile){
+          evt.preventDefault();
+        }
+        else return;
+
+        var canv = this;
+
+        createImageBitmap(imageFile).then(function(imgBmp){
+          var hid = document.createElement("canvas");
+          hid.width = imgBmp.width;
+          hid.height = imgBmp.height;
+          hid.ctx = hid.getContext("2d");
+          hid.ctx.drawImage(imgBmp, 0, 0);
+          var imgData = hid.ctx.getImageData(0, 0, hid.width, hid.height);
+
+          canv.width = hid.width;
+          canv.height = hid.height;
+          canv.image = imgData;
+        });
+        //document.getElementById("testImage").src = URL.createObjectURL(imageFile);
       }
 
       function drawDiagram(evt){
@@ -160,10 +206,10 @@
         imgData.data[i+3] = 255;
       }
 
-      function VorPoint(x, y){
+      function VorPoint(x, y, color){
         this.x = x;
         this.y = y;
-        this.colorArray = randomColor();
+        this.colorArray = color || randomColor();
         this.color = colorFromArray(this.colorArray);
       }
 
@@ -217,6 +263,7 @@
         <button class="download">Download Image</button>
         <a class="imgLink" style="display: none">image download</a>
       </div>
+      <!--<img id="testImage" />-->
     </div>
   </body>
 </html>
