Clear points after adding image

--- a/voronoi.html
+++ b/voronoi.html
@@ -126,6 +126,7 @@
           canv.width = hid.width;
           canv.height = hid.height;
           canv.image = imgData;
+          canv.points = [];
         });
         //document.getElementById("testImage").src = URL.createObjectURL(imageFile);
       }
