--- a/glVoronoi.html
+++ b/glVoronoi.html
@@ -174,6 +174,7 @@
         }
 
         function fillAreasGl() {
+            const startTime = new Date();
             const gl = this.gl;
 
             const fsSource = `
@@ -259,6 +260,9 @@
             gl.drawArrays(gl.TRIANGLE_STRIP, offset, vertexCount);
 
             this.isDrawn = true;
+
+            const elapsed = (new Date()) - startTime;
+            console.log(`${elapsed / 1000}s`);
         }
 
         //
