--- a/glVoronoi.html
+++ b/glVoronoi.html
@@ -2,6 +2,135 @@
 <html>
 <head>
     <title>Voronoi Generator</title>
+    <script type="text/javascript">
+        function draw2DShader(gl, fsSource, bindFn) {
+            const vsSource = `
+                attribute vec4 aVertexPosition;
+                void main() {
+                gl_Position = aVertexPosition;
+                }
+            `;
+
+            const shaderProgram = initShaderProgram(gl, vsSource, fsSource);
+            const programInfo = {
+                program: shaderProgram,
+                attribLocations: {
+                    vertexPosition: gl.getAttribLocation(shaderProgram, "aVertexPosition"),
+                },
+            };
+
+            const buffers = initBuffers(gl);
+
+            setPositionAttribute(gl, buffers, programInfo);
+
+            gl.useProgram(shaderProgram);
+
+            bindFn(shaderProgram);
+
+            const offset = 0;
+            const vertexCount = 4;
+            gl.drawArrays(gl.TRIANGLE_STRIP, offset, vertexCount);
+        }
+
+        //
+        // Initialize a shader program, so WebGL knows how to draw our data
+        //
+        function initShaderProgram(gl, vsSource, fsSource) {
+            const vertexShader = loadShader(gl, gl.VERTEX_SHADER, vsSource);
+            const fragmentShader = loadShader(gl, gl.FRAGMENT_SHADER, fsSource);
+
+            // Create the shader program
+
+            const shaderProgram = gl.createProgram();
+            gl.attachShader(shaderProgram, vertexShader);
+            gl.attachShader(shaderProgram, fragmentShader);
+            gl.linkProgram(shaderProgram);
+
+            // If creating the shader program failed, alert
+
+            if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS)) {
+                alert(
+                    `Unable to initialize the shader program: ${gl.getProgramInfoLog(
+                        shaderProgram,
+                    )}`,
+                );
+                return null;
+            }
+
+            return shaderProgram;
+        }
+
+        //
+        // creates a shader of the given type, uploads the source and
+        // compiles it.
+        //
+        function loadShader(gl, type, source) {
+            const shader = gl.createShader(type);
+
+            // Send the source to the shader object
+            gl.shaderSource(shader, source);
+
+            // Compile the shader program
+            gl.compileShader(shader);
+
+            // See if it compiled successfully
+            if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+                alert(
+                    `An error occurred compiling the shaders: ${gl.getShaderInfoLog(shader)}`,
+                );
+                gl.deleteShader(shader);
+                return null;
+            }
+
+            return shader;
+        }
+
+        function initBuffers(gl) {
+            const positionBuffer = initPositionBuffer(gl);
+
+            return {
+                position: positionBuffer,
+            };
+        }
+
+        function initPositionBuffer(gl) {
+            // Create a buffer for the square's positions.
+            const positionBuffer = gl.createBuffer();
+
+            // Select the positionBuffer as the one to apply buffer
+            // operations to from here out.
+            gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
+
+            // Now create an array of positions for the square.
+            const positions = [1.0, 1.0, -1.0, 1.0, 1.0, -1.0, -1.0, -1.0];
+
+            // Now pass the list of positions into WebGL to build the
+            // shape. We do this by creating a Float32Array from the
+            // JavaScript array, then use it to fill the current buffer.
+            gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(positions), gl.STATIC_DRAW);
+
+            return positionBuffer;
+        }
+
+        function setPositionAttribute(gl, buffers, programInfo) {
+            const numComponents = 2; // pull out 2 values per iteration
+            const type = gl.FLOAT; // the data in the buffer is 32bit floats
+            const normalize = false; // don't normalize
+            const stride = 0; // how many bytes to get from one set of values to the next
+            // 0 = use type and numComponents above
+            const offset = 0; // how many bytes inside the buffer to start from
+            gl.bindBuffer(gl.ARRAY_BUFFER, buffers.position);
+            gl.vertexAttribPointer(
+                programInfo.attribLocations.vertexPosition,
+                numComponents,
+                type,
+                normalize,
+                stride,
+                offset,
+            );
+            gl.enableVertexAttribArray(programInfo.attribLocations.vertexPosition);
+        }
+    </script>
     <script type="text/javascript">//<![CDATA[
         "use strict";
 
@@ -63,11 +192,11 @@
                 vor.canvas.points[i] = vor.canvas.getPoint(Math.floor(Math.random() * (vor.canvas.width)), Math.floor(Math.random() * (vor.canvas.height)));
             }
 
-            /*var pointSpacing = 20;
-            var isOdd = false;
-            for(var y = pointSpacing / 2; y < vor.canvas.height; y += pointSpacing){
+            /*const pointSpacing = 20;
+            let isOdd = false;
+            for(let y = pointSpacing / 2; y < vor.canvas.height; y += pointSpacing){
               isOdd = !isOdd;
-              for(var x = isOdd ? pointSpacing : pointSpacing / 2; x < vor.canvas.width; x += pointSpacing){
+              for(let x = isOdd ? pointSpacing : pointSpacing / 2; x < vor.canvas.width; x += pointSpacing){
                 vor.canvas.points.push(new VorPoint(x, y));
               }
             }*/
@@ -98,17 +227,31 @@
         }
 
         function drawPoints(onlyLast) {
-            // const ctx = this.ctx;
-            // ctx.fillStyle = "#000000";
-            // if(onlyLast){
-            //   const point = this.points[this.points.length - 1];
-            //   ctx.fillRect(point.x-1, point.y-1, 3, 3);
-            // }
-            // else{
-            //   this.points.forEach(function(point){
-            //     ctx.fillRect(point.x-1, point.y-1, 3, 3);
-            //   });
-            // }
+            const gl = this.gl;
+
+            const fsSource = `
+            precision mediump float;
+            //uniform vec2 resolution;
+            uniform vec2 points[${this.points.length}];
+
+            void main() {
+                for(int i = 0; i < ${this.points.length}; i++) {
+                    float distance = distance(points[i], gl_FragCoord.xy);
+                    if(distance <= 2.0) {
+                        gl_FragColor = vec4(0.0, 0.0, 0.0, 1.0);
+                    }
+                }
+            }
+            `;
+
+            draw2DShader(gl, fsSource, (shaderProgram) => {
+                //gl.uniform2f(gl.getUniformLocation(shaderProgram, "resolution"), this.width, this.height);
+
+                gl.uniform2fv(
+                    gl.getUniformLocation(shaderProgram, "points"),
+                    new Float32Array(this.points.flatMap(point => [point.x, this.height - point.y]))
+                );
+            });
         }
 
         function addPoint(evt) {
@@ -233,153 +376,31 @@
             }
             `;
 
-            const shaderProgram = initShaderProgram(gl, fsSource);
-            const programInfo = {
-                program: shaderProgram,
-                attribLocations: {
-                    vertexPosition: gl.getAttribLocation(shaderProgram, "aVertexPosition"),
-                },
-            };
+            draw2DShader(gl, fsSource, (shaderProgram) => {
+                //gl.uniform2f(gl.getUniformLocation(shaderProgram, "resolution"), this.width, this.height);
 
-            const buffers = initBuffers(gl);
+                gl.uniform2fv(
+                    gl.getUniformLocation(shaderProgram, "points"),
+                    new Float32Array(this.points.flatMap(point => [point.x, this.height - point.y]))
+                );
 
-            setPositionAttribute(gl, buffers, programInfo);
+                const textureWidth = 100;
+                const textureData = new Uint8Array([...this.points.flatMap(point => [...point.colorArray, 0xFF]), ...(new Array(4 * (textureWidth - (this.points.length % textureWidth)))).fill(0xFF)]);
+                const textureHeight = Math.ceil(textureData.length / (4.0 * textureWidth));
 
-            gl.useProgram(shaderProgram);
-
-            //gl.uniform2f(gl.getUniformLocation(shaderProgram, "resolution"), this.width, this.height);
-
-            gl.uniform2fv(
-                gl.getUniformLocation(shaderProgram, "points"),
-                new Float32Array(this.points.flatMap(point => [point.x, this.height - point.y]))
-            );
-
-            const textureWidth = 100;
-            const textureData = new Uint8Array([...this.points.flatMap(point => [...point.colorArray, 0xFF]), ...(new Array(4 * (textureWidth - (this.points.length % textureWidth)))).fill(0xFF)]);
-            const textureHeight = Math.ceil(textureData.length / (4.0 * textureWidth));
-
-            const texture = gl.createTexture();
-            gl.bindTexture(gl.TEXTURE_2D, texture);
-            gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_S, gl.CLAMP_TO_EDGE);
-            gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_T, gl.CLAMP_TO_EDGE);
-            gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
-            gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, textureWidth, textureHeight, 0, gl.RGBA, gl.UNSIGNED_BYTE, textureData);
-            gl.uniform1f(gl.getUniformLocation(shaderProgram, "textureHeight"), textureHeight);
-
-            const offset = 0;
-            const vertexCount = 4;
-            gl.drawArrays(gl.TRIANGLE_STRIP, offset, vertexCount);
+                const texture = gl.createTexture();
+                gl.bindTexture(gl.TEXTURE_2D, texture);
+                gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_S, gl.CLAMP_TO_EDGE);
+                gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_T, gl.CLAMP_TO_EDGE);
+                gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
+                gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, textureWidth, textureHeight, 0, gl.RGBA, gl.UNSIGNED_BYTE, textureData);
+                gl.uniform1f(gl.getUniformLocation(shaderProgram, "textureHeight"), textureHeight);
+            });
 
             this.isDrawn = true;
 
             const elapsed = (new Date()) - startTime;
             console.log(`${elapsed / 1000}s`);
-        }
-
-        //
-        // Initialize a shader program, so WebGL knows how to draw our data
-        //
-        function initShaderProgram(gl, fsSource) {
-            const vsSource = `
-    attribute vec4 aVertexPosition;
-    void main() {
-      gl_Position = aVertexPosition;
-    }
-  `;
-
-            const vertexShader = loadShader(gl, gl.VERTEX_SHADER, vsSource);
-            const fragmentShader = loadShader(gl, gl.FRAGMENT_SHADER, fsSource);
-
-            // Create the shader program
-
-            const shaderProgram = gl.createProgram();
-            gl.attachShader(shaderProgram, vertexShader);
-            gl.attachShader(shaderProgram, fragmentShader);
-            gl.linkProgram(shaderProgram);
-
-            // If creating the shader program failed, alert
-
-            if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS)) {
-                alert(
-                    `Unable to initialize the shader program: ${gl.getProgramInfoLog(
-                        shaderProgram,
-                    )}`,
-                );
-                return null;
-            }
-
-            return shaderProgram;
-        }
-
-        //
-        // creates a shader of the given type, uploads the source and
-        // compiles it.
-        //
-        function loadShader(gl, type, source) {
-            const shader = gl.createShader(type);
-
-            // Send the source to the shader object
-            gl.shaderSource(shader, source);
-
-            // Compile the shader program
-            gl.compileShader(shader);
-
-            // See if it compiled successfully
-            if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
-                alert(
-                    `An error occurred compiling the shaders: ${gl.getShaderInfoLog(shader)}`,
-                );
-                gl.deleteShader(shader);
-                return null;
-            }
-
-            return shader;
-        }
-
-        function initBuffers(gl) {
-            const positionBuffer = initPositionBuffer(gl);
-
-            return {
-                position: positionBuffer,
-            };
-        }
-
-        function initPositionBuffer(gl) {
-            // Create a buffer for the square's positions.
-            const positionBuffer = gl.createBuffer();
-
-            // Select the positionBuffer as the one to apply buffer
-            // operations to from here out.
-            gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
-
-            // Now create an array of positions for the square.
-            const positions = [1.0, 1.0, -1.0, 1.0, 1.0, -1.0, -1.0, -1.0];
-
-            // Now pass the list of positions into WebGL to build the
-            // shape. We do this by creating a Float32Array from the
-            // JavaScript array, then use it to fill the current buffer.
-            gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(positions), gl.STATIC_DRAW);
-
-            return positionBuffer;
-        }
-
-        function setPositionAttribute(gl, buffers, programInfo) {
-            const numComponents = 2; // pull out 2 values per iteration
-            const type = gl.FLOAT; // the data in the buffer is 32bit floats
-            const normalize = false; // don't normalize
-            const stride = 0; // how many bytes to get from one set of values to the next
-            // 0 = use type and numComponents above
-            const offset = 0; // how many bytes inside the buffer to start from
-            gl.bindBuffer(gl.ARRAY_BUFFER, buffers.position);
-            gl.vertexAttribPointer(
-                programInfo.attribLocations.vertexPosition,
-                numComponents,
-                type,
-                normalize,
-                stride,
-                offset,
-            );
-            gl.enableVertexAttribArray(programInfo.attribLocations.vertexPosition);
         }
 
         function VorPoint(x, y, color) {
